force-app/main/default/objects/Application__c/fields/Eligibility_Rep__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Eligibility Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>