force-app/main/default/objects/Application__c/fields/Primary_Patient__c.field-meta.xml
<CustomField>
    <fullName>Primary_Patient__c</fullName>
    <label>Primary Patient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>