force-app/main/default/objects/Application__c/fields/User_Assigned__c.field-meta.xml
<CustomField>
    <fullName>User_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>